--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 :root {
-  --padding-x-lg: 12rem;
+  --padding-x-lg: 18rem;
 }
 
 *,
@@ -19,8 +21,10 @@ body {
   margin: 0;
   overflow-x: hidden;
   color: #f8f9fa;
+  font-optical-sizing: auto;
   background-color: #000000;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
+  line-height: 162.5%;
 }
 
 ul {
@@ -30,6 +34,41 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+	line-height: 140%;
+  color: rgb(226, 226, 226);
+}
+
+p > a {
+  color: #f19e1a;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin-bottom: 2rem;
+}
+
+.section__title {
+	font-size: 2.2rem;
+  gap: .3rem;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  opacity: 0.9;
+
+}
+
+.section__title::before {
+  content: "";
+  height: 2.5rem;
+  width: .2rem;
+  background-color: #fca311;
+  
+  
 }
 
 @media screen and (max-width: 1024px) {
@@ -46,4 +85,8 @@ a {
   :root {
     --padding-x-lg: 1.5rem;
   }
+
+p {
+	line-height: 130%;
+}
 }
