--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -1,24 +1,59 @@
 ---
-import './main-layout.css'
-import "../styles/global.css"
-import Nav from "../components/Nav.astro"
-import Header from '../components/Header.astro'
+import './main-layout.css';
+import "../styles/global.css";
+
+import { ViewTransitions } from 'astro:transitions';
+
+interface Props {
+	title: string,
+	description: string,
+	image? : string
+}
+
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const { title, description, image = "/public/images/projectsample.png" } =  Astro.props;
+let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
+
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<!-- Global data -->
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Language" content="en" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Tonie</title>
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href={canonicalURL} />
+
+		<!-- Primary meta tags -->
+		<title>{title}</title>
+		<meta name="title" content={title} />
+		<meta name="description" content={description} />
+		<meta name="keywords" content={keywords} />
+
+		<!-- OpenGraph/Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content={Astro.url} />
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={description} />
+		<meta property="og:image" content={new URL(image, Astro.url)} />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content={Astro.url} />
+		<meta property="twitter:title" content={title} />
+		<meta property="twitter:description" content={description} />
+		<meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+		<ViewTransitions />
 	</head>
 	<body>
-		<Nav />
-		<Header />
 		<slot />
 	</body>
 </html>
