chore: cleanup font sizes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,9 @@ import Header from '../components/Header.astro';
   <main>
     <section class="intro_section">
       <p>
-        Lorem ipsum dolor sit amet consectetu r <a href="">Hi</a> adipisicing elit.
+        Lorem ipsum dolor sit amet consectetu r <a href="">Hi  adipisicing elit.</a>
         Dignissimos vitae ducimus, iure maxime ea mollitia tenetur incidunt quam
-        illum suscipit, laudantium rem assumenda dolor minus esse! Iste voluptates
-        doloremque ea quam ipsam harum autem laudantium voluptate enim pariatur expedita
-        deserunt, perspiciatis consequuntur incidunt explicabo nemo porro obcaecati
-        minima ratione natus tempora aliquam? Laboriosam, iusto.
+        illum suscipit, laudantium rem assumenda dolor minus esse!
       </p>
     </section>
 
@@ -24,9 +21,7 @@ import Header from '../components/Header.astro';
       <h2 class="section__title">Projects</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-        aliquam ipsa tempore sed non! Et.Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Officiis ajsb hbv shvs s vhvs shvss liquam ipsa
-        tempore sed non! Et
+        aliquam ipsa tempore sed non!
       </p>
 
       <div class="project_container">
