--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -4,12 +4,6 @@ import "../styles/global.css";
 
 import { ViewTransitions } from 'astro:transitions';
 
-interface Props {
-	title: string,
-	description: string,
-	image? : string
-}
-
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, image = "/public/images/projectsample.png" } =  Astro.props;
 let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
@@ -36,6 +30,12 @@ let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, 
 		<meta name="title" content={title} />
 		<meta name="description" content={description} />
 		<meta name="keywords" content={keywords} />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content={Astro.url} />
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={description} />
+		<meta property="og:image" content={new URL(image, Astro.url)} />
 
 		<!-- OpenGraph/Facebook -->
 		<meta property="og:type" content="website" />
