--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 :root {
   --padding-x-lg: 18rem;
@@ -24,7 +24,7 @@ body {
   font-optical-sizing: auto;
   background-color: #000000;
   font-family: "Inter", sans-serif;
-  line-height: 162.5%;
+  line-height: 1.9;
 }
 
 ul {
@@ -37,7 +37,7 @@ a {
 }
 
 p {
-	line-height: 140%;
+  line-height: 140%;
   color: rgb(226, 226, 226);
 }
 
@@ -52,23 +52,23 @@ section {
 }
 
 .section__title {
-	font-size: 2.2rem;
-  gap: .3rem;
+  font-size: 2.2rem;
+  gap: 0.3rem;
   font-weight: 800;
   display: flex;
   align-items: center;
   opacity: 0.9;
-
 }
 
 .section__title::before {
   content: "";
   height: 2.5rem;
-  width: .2rem;
+  width: 0.2rem;
   background-color: #fca311;
 }
 
-section p, section time {
+section p,
+section time {
   opacity: 0.8;
 }
 
@@ -87,7 +87,7 @@ section p, section time {
     --padding-x-lg: 1.5rem;
   }
 
-p {
-	line-height: 130%;
-}
+  p {
+    line-height: 130%;
+  }
 }
