--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,27 +27,27 @@ import Header from '../components/Header.astro';
       <div class="project_container">
 		<div class="project">
 			<div class="project_img">
-			  <img src="/images/projectsample.png" alt="" />
+			  <img src="/images/projectsample.png" alt="" loading="lazy" />
 			</div>
 			<h3>Go Dotenv</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,tempora!</p>
 		</div>
 		<div class="project">
 			<div class="project_img">
-			  <img src="/images/projectsample.png" alt="" />
+			  <img src="/images/projectsample.png" alt="" loading="lazy" />
 			</div>
 			<h3>Go Dotenv</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,tempora!</p>
 		</div>
 		<div class="project">
 			<div class="project_img">
-			  <img src="/images/projectsample.png" alt="" />
+			  <img src="/images/projectsample.png" alt="" loading="lazy" />
 			</div>
 			<h3>Go Dotenv</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,tempora!</p>
 		</div>
 	  </div>
-			
+
     </section>
   </main>
 </MainLayout>
