--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -5,7 +5,7 @@ import "../styles/global.css";
 import { ViewTransitions } from 'astro:transitions';
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description, image = "/public/images/projectsample.png" } =  Astro.props;
+const { title, description, image = "/public/images/projectsample.png"} =  Astro.props;
 let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
 
 ---
@@ -16,7 +16,7 @@ let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, 
 		<!-- Global data -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Language" content="en" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/favicon.ico">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<meta name="viewport" content="width=device-width" />
@@ -31,6 +31,7 @@ let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, 
 		<meta name="description" content={description} />
 		<meta name="keywords" content={keywords} />
 
+		<!-- OpenGraph/Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content={Astro.url} />
 		<meta property="og:title" content={title} />
