feat: added footer

--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -4,6 +4,7 @@ import FormattedDate from '../components/FormattedDate.astro';
 import Nav from '../components/Nav.astro';
 import "../styles/global.css";
 import "./blog-layout.css";
+import Footer from "../components/Footer.astro";
 
 type Props = CollectionEntry<'articles'>['data'];
 
@@ -72,7 +73,9 @@ const {title, heroImage, pubDate, tags, description} = Astro.props
                 </div>
             </section>
         <slot/>
+
         </main>
+				<Footer />
 	</body>
 </html>
 
