refactor: footer link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,5 +6,5 @@ import "./footer.css"
 
 <footer>
 	<span>&#169; 2024 Tonie.</span>
-	<a href="https://www.buymeacoffee.com/tonievictor" target="_blank">Coffee</a>
+	<a href="https://www.buymeacoffee.com/tonievictor" target="_blank">Coffee ☕</a>
 </footer>
