--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -17,7 +17,7 @@ let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, 
 		<!-- Global data -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Language" content="en" />
-		<link rel="icon" type="image/svg+xml" href="/public/favicon.ico">
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<meta name="viewport" content="width=device-width" />
