--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -14,19 +14,22 @@ footer a {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
   padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
-  font-weight: 700;
-  color: black;
-  background-color: #fca311;
+  background-color: rgba(252, 163, 17, 0.8);
+  opacity: 1 !important;
+  color: white;
+  /* font-weight: 700; */
+  line-height: 150%;
+  font-size: 1.2rem;
 }
 
 @media screen and (max-width: 480px) {
   footer a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    line-height: 150%;
+    font-size: 1rem;
     padding: 0.2rem 1rem;
-    font-weight: 600;
+    gap: 0rem;
   }
 }
