--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -19,7 +19,7 @@ const {title, heroImage, pubDate, tags, description} = Astro.props
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="Content-Language" content="en" />
-		<link rel="icon" type="image/svg+xml" href="/public/favicon.ico">
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
 		<meta name="description" content={description} />
