--- a/src/layout/blog-layout.css
+++ b/src/layout/blog-layout.css
@@ -1,63 +1,68 @@
 main {
-    padding: 2rem var(--padding-x-lg);
-    display: flex;
-    gap: 2rem;
-    flex-direction: column;
-    text-align: justify;
+  padding: 2rem var(--padding-x-lg);
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
 }
 
 .back {
-    color: #fca311;
-    opacity: 0.8;
-    transition: ease 300ms all;
+  color: #fca311;
+  opacity: 0.8;
+  transition: ease 300ms all;
 }
 
 .back:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .top {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.top p,
+.top time {
+  opacity: 0.7;
 }
 
 .top h1 {
-    font-size: 2.2rem;
-    opacity: 0.85;
-    font-weight: 900;
+  font-size: 2.2rem;
+  opacity: 0.85;
+  font-weight: 900;
 }
 
 .top_image {
-    width: 100%;
-    height: 35rem;
+  width: 100%;
+  height: 35rem;
+  border-radius: 0.5rem;
 }
 
 .top_image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
 }
 
 @media screen and (max-width: 1024px) {
-    .top_image {
-        width: 100%;
-        height: 25rem;
-    }
+  .top_image {
+    width: 100%;
+    height: 25rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .top_image {
-        width: 100%;
-        height: 20rem;
-    }
+  .top_image {
+    width: 100%;
+    height: 20rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .top_image {
-        width: 100%;
-        height: 15rem;
-    }
+  .top_image {
+    width: 100%;
+    height: 15rem;
+  }
 }
- 
