--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,72 +1,71 @@
 main {
   padding: 2rem var(--padding-x-lg);
-	display: flex;
-	flex-direction: column;
-	gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .intro_section {
-	display: flex;
-	gap: 1rem;
-	text-align: justify;
-	text-justify: distribute;
-	word-break: break-all;
+  display: flex;
+  gap: 1rem;
+  text-justify: distribute;
+  word-break: break-all;
 }
 
 .project_container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .project {
-	flex: 0 0 30%;
-	display: flex;
-	flex-direction: column;
-	gap: .5rem;
+  flex: 0 0 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .project_img {
-	width: 100%;
-	height: 12rem;
-	border-radius: .5rem;
+  width: 100%;
+  height: 12rem;
+  border-radius: 0.5rem;
 }
 
 .project_img img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: .5rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
 }
 
 .project h3 {
-	color: rgb(245, 245, 245);
-	font-weight: 500;
+  color: rgb(245, 245, 245);
+  font-weight: 500;
 }
 
 .project p {
-	font-weight: 300;
-	font-size: 0.9rem;
-	width: 100%;
+  font-weight: 300;
+  font-size: 0.9rem;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
-	.project_container {
-		gap: 2rem;
-	}
-	.project {
-		flex: 0 0 45%;
-		display: flex;
-		flex-direction: column;
-		gap: .5rem;
-	}
+  .project_container {
+    gap: 2rem;
+  }
+  .project {
+    flex: 0 0 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
-	.project_container {
-		flex-direction: column;
-	}
-	.project_img{
-		height: 15rem;
-	}
+  .project_container {
+    flex-direction: column;
+  }
+  .project_img {
+    height: 15rem;
+  }
 }
