chore: added page description

--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -6,7 +6,7 @@ import Footer from "../components/Footer.astro";
 import { ViewTransitions } from 'astro:transitions';
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description, image = "/public/images/projectsample.png"} =  Astro.props;
+const { title, description, image = "/images/projectsample.png"} =  Astro.props;
 let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
 
 ---
