--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Nav from "../components/Nav.astro";
 import Header from '../components/Header.astro';
 ---
 
-<MainLayout title="Tonie" description="">
+<MainLayout title="Tonie" description="Tonie - Software Developer">
   <Nav />
 	<Header />
   <main>
