refactor: markdown image rendering

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import "./nav.css"
 <nav>
 	<!-- logo -->
 	<div class="logo__img" >
-		<img src="/images/logo.jpg" alt="" loading="lazy">
+		<img src="/images/profile.jpeg" alt="" loading="lazy">
 	</div>
 
 	<!-- socials -->
