--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -29,7 +29,7 @@
 .blog p {
   opacity: 0.85;
   margin: 1rem 0;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 150%;
 }
 
@@ -86,4 +86,38 @@
   background-color: rgba(241, 158, 26, 0.1);
   border-radius: 0.5rem;
   height: max-content;
+}
+
+.blog img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .blog img {
+    width: 100%;
+    height: 25rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .blog img {
+    width: 100%;
+    height: 20rem;
+    border-radius: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .blog img {
+    width: 100%;
+    height: 15rem;
+    border-radius: 0.5rem;
+  }
+
+  .blog p {
+    font-size: 1rem;
+  }
 }
