refactor: seo and projects

--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -2,10 +2,11 @@
 import './main-layout.css';
 import "../styles/global.css";
 import Footer from "../components/Footer.astro";
+import SeoHead from "./seo-head.astro";
 
 import { ViewTransitions } from 'astro:transitions';
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
 const { title, description, image = "/images/projectsample.png"} =  Astro.props;
 let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
 
@@ -13,46 +14,7 @@ let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, 
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<!-- Global data -->
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta http-equiv="Content-Language" content="en" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.ico">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-
-		<!-- Canonical URL -->
-		<link rel="canonical" href={canonicalURL} />
-
-		<!-- Primary meta tags -->
-		<title>{title}</title>
-		<meta name="title" content={title} />
-		<meta name="description" content={description} />
-		<meta name="keywords" content={keywords} />
-
-		<!-- OpenGraph/Facebook -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content={Astro.url} />
-		<meta property="og:title" content={title} />
-		<meta property="og:description" content={description} />
-		<meta property="og:image" content={new URL(image, Astro.url)} />
-
-		<!-- OpenGraph/Facebook -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content={Astro.url} />
-		<meta property="og:title" content={title} />
-		<meta property="og:description" content={description} />
-		<meta property="og:image" content={new URL(image, Astro.url)} />
-
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content={Astro.url} />
-		<meta property="twitter:title" content={title} />
-		<meta property="twitter:description" content={description} />
-		<meta property="twitter:image" content={new URL(image, Astro.url)} />
-
+		<SeoHead title={title} description={description} image={image} keywords={keywords}/>
 		<ViewTransitions />
 	</head>
 	<>
