--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -5,54 +5,21 @@ import Nav from '../components/Nav.astro';
 import "../styles/global.css";
 import "./blog-layout.css";
 import Footer from "../components/Footer.astro";
+import SeoHead from "./seo-head.astro";
 
 type Props = CollectionEntry<'articles'>['data'];
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
-const {title, heroImage, pubDate, tags, description} = Astro.props
+const {title, heroImage, pubDate, tags, description} = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta http-equiv="Content-Language" content="en" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.ico">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="generator" content={Astro.generator} />
-		<meta name="description" content={description} />
-		<meta name="keywords" content={tags} />
 		<meta name="author" content="Tonie Victor" />
 		<meta name="robots" content="index, follow" />
 		<meta name="googlebot" content="index, follow" />
 		<meta name="google" content="notranslate" />
-
-    <link rel="canonical" href={canonicalURL} />
-
-		<!-- OpenGraph/Facebook -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content={Astro.url} />
-		<meta property="og:title" content={title} />
-		<meta property="og:description" content={description} />
-		<meta property="og:image" content={new URL(heroImage, Astro.url)} />
-
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content={Astro.url} />
-		<meta property="twitter:title" content={title} />
-		<meta property="twitter:description" content={description} />
-		<meta property="twitter:image" content={new URL(heroImage, Astro.url)} />
-
-		<!-- OpenGraph/Facebook -->
-		<meta property="og:site_name" content="Tonie" />
-		<meta property="og:site" content="Tonie" />
-		<meta property="og:title" content={title} />
-		<meta property="og:description" content={description} />
-		<meta property="og:image" content={new URL(heroImage, Astro.url)} />
-		<meta property="og:url" content={Astro.url} />
-		<title>{title}</title>
+		<SeoHead title={title} description={description} image={heroImage} keywords={tags}/>
 	</head>
 
 	<body>
