--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,7 +22,7 @@ main {
   flex: 0 0 30%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.2rem;
 }
 
 .project_img {
@@ -47,6 +47,21 @@ main {
   font-weight: 300;
   font-size: 0.9rem;
   width: 100%;
+}
+
+.project_links {
+  display: flex;
+  align-items: start;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+.project_link {
+  font-size: 1.3rem;
+}
+
+.project_link:hover {
+  color: #fca311;
 }
 
 @media screen and (max-width: 768px) {
