--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -7,7 +7,7 @@ import SeoHead from "./seo-head.astro";
 import { ViewTransitions } from 'astro:transitions';
 
 
-const { title, description, image = "/images/projectsample.png"} =  Astro.props;
+const { title, description, image = "/images/profile.jpeg"} =  Astro.props;
 let keywords = "tonie, victor, developer, software, engineer, nwanochi, chisom, python, c, typescript, golang, nodejs, gleam";
 
 ---
