--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,17 +13,15 @@ import { Icon } from "astro-icon/components";
   <main>
     <section class="intro_section">
       <p>
-        Lorem ipsum dolor sit amet consectetu r <a href="">Hi  adipisicing elit.</a>
-        Dignissimos vitae ducimus, iure maxime ea mollitia tenetur incidunt quam
-        illum suscipit, laudantium rem assumenda dolor minus esse!
+        Hi! My name is <b>Tonie Victor</b> I'm a software engineer with a primary interest in infrastructure, networking and backend systems. </br> Outside of tinkering with software, I play football, listen to music, play games and read books.
+        <a href="https://cal.com/tonie-ng/say-hello" target="_blank"> Say Hello!</a>
       </p>
     </section>
 
     <section id="projects">
       <h2 class="section__title">Projects</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-        aliquam ipsa tempore sed non!
+        Here are some of the projects I've (or still?) worked on.
       </p>
 
       <div class="project_container">
