--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,9 +8,7 @@ import Nav from "../../components/Nav.astro";
 import Header from '../../components/Header.astro';
 
 
-const posts = (await getCollection('articles')).filter((post) => {
-	post.data.draft == false
-}).sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
+const posts = (await getCollection('articles')).sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).filter((post) => post.data.draft == false);
 ---
 <MainLayout title="Blog" description="Tonie - Software Developer">
 	<Nav />
