--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -26,11 +26,20 @@
   opacity: 0.8;
 }
 
+.blog h1,
+h2,
+h3,
+h4,
+h5 {
+  opacity: 0.8;
+  line-height: 34px;
+}
+
 .blog p {
   opacity: 0.85;
   margin: 1rem 0;
   font-size: 1.1rem;
-  line-height: 150%;
+  line-height: 34px;
 }
 
 .blog a {
@@ -46,11 +55,13 @@
   font-size: 0.9rem;
   overflow-x: auto;
   border-radius: 0.5rem;
+  width: 100%;
+  text-wrap: wrap;
 }
 
 .blog pre code {
-  font-family: "Courier New", Courier, monospace;
   border-radius: 0.5rem;
+  /* all: unset; */
 }
 
 .blog blockquote {
@@ -64,27 +75,12 @@
 .blog p code {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-style: italic;
-  font-size: 0.88rem;
+  font-size: 1rem;
   line-height: 1.9;
   margin: 0;
   color: #f19e1a;
   font-weight: 600;
   background: scroll;
-  height: max-content;
-}
-
-.blog blockquote p {
-  padding: 1.25rem;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-style: italic;
-  font-size: 0.9rem;
-  line-height: 1.9;
-  margin: 0;
-  color: #f19e1a;
-  font-weight: 600;
-  background: scroll;
-  background-color: rgba(241, 158, 26, 0.1);
-  border-radius: 0.5rem;
   height: max-content;
 }
 
