--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@font-face {
+  font-family: "Atkinson";
+  src: url("/fonts/atkinson-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Atkinson";
+  src: url("/fonts/atkinson-bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 :root {
   --padding-x-lg: 18rem;
@@ -22,10 +35,21 @@ body {
   overflow-x: hidden;
   color: #f8f9fa;
   font-optical-sizing: auto;
-  background-color: #000000;
-  font-family: Helvetica, Arial, sans-serif;
-  line-height: 1.9;
+  font-family: "Atkinson", sans-serif;
+  background-color: #1a1a1a;
+  line-height: 34px;
   font-size: 18px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
 }
 
 ul {
@@ -38,7 +62,7 @@ a {
 }
 
 p {
-  line-height: 140%;
+  line-height: 34px;
   color: rgb(226, 226, 226);
 }
 
