--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,8 +8,6 @@ main {
 .intro_section {
   display: flex;
   gap: 1rem;
-  text-justify: distribute;
-  word-break: break-all;
 }
 
 .project_container {
@@ -29,6 +27,7 @@ main {
   width: 100%;
   height: 12rem;
   border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .project_img img {
@@ -47,6 +46,9 @@ main {
   font-weight: 300;
   font-size: 0.9rem;
   width: 100%;
+  line-height: 1.3;
+  min-height: 2.3rem;
+  max-height: 2.3rem;
 }
 
 .project_links {
