--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,6 +115,15 @@ section time {
     --padding-x-lg: 1.5rem;
   }
 
+  .section__title {
+    font-size: 1.8rem;
+    gap: 0.3rem;
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    opacity: 0.9;
+  }
+
   p {
     line-height: 130%;
   }
