--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -1,5 +1,6 @@
 ---
-const {title, description, keywords, image} = Astro.props;
+const {title, description, keywords, img} = Astro.props;
+const image = img || "/images/profile.jpeg";
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
@@ -28,10 +29,12 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:card" content="summary" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta name="twitter:site" content="@tonie_ng" />
+<meta name="twitter:creator" content="@tonie_ng" />
 
 <title>{title}</title>
