--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import MainLayout from "../layout/main-layout.astro";
 import "../styles/index.css";
 import Nav from "../components/Nav.astro";
 import Header from '../components/Header.astro';
-import {ProjectsData} from "../data/projects";
+import { ProjectsData } from "../data/projects";
 import { Icon } from "astro-icon/components";
 ---
 
@@ -13,8 +13,7 @@ import { Icon } from "astro-icon/components";
   <main>
     <section class="intro_section">
       <p>
-        Hi! My name is <b>Tonie Victor</b> I'm a software engineer with a primary interest in infrastructure, networking and backend systems. </br> Outside of tinkering with software, I play football, listen to music, play games and read books.
-        <a href="https://cal.com/tonie-ng/say-hello" target="_blank"> Say Hello!</a>
+        Hi! My name is <b>Tonie Victor</b> I'm a software engineer with a primary interest in infrastructure, networking and backend systems. Outside of tinkering with software, I play football, listen to music, play games and read books. Outside of tinkering with software, I play football, listen to music, play games and read books.<br><br> Outside of tinkering with software, I play football, listen to music, play games and read books Outside of tinkering with software, I play football, listen to music, play games and read books. Outside of tinkering with software, I play football, listen to music, play games and read books. Outside of tinkering with software, I play football, listen to music, play games and read books. <a href="https://cal.com/tonie-ng/say-hello" target="_blank"> Say Hello!</a>
       </p>
     </section>
 
@@ -38,8 +37,6 @@ import { Icon } from "astro-icon/components";
 						</div>
 					</div>
 				))}
-
-
 	  </div>
 
     </section>
