reafctor: changed the layout of the project section.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,8 +11,8 @@ import "./header.css"
 
 	<div class="nav__menu hidden" id="nav_menu">
 		<a href="/" class="nav_link">~/home</a>
-		<a href="/#projects" class="nav_link">~/projects</a>
 		<a href="/blog" class="nav_link">~/blog</a>
+		<a href="/live" class="nav_link">~/live</a>
 	</div>
 	</div>
 </header>
