--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -6,7 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()}>
+<time datetime={date.toISOString()} style={{"font-size": ".9rem"}}>
 	{
 		date.toLocaleDateString('en-us', {
 			year: 'numeric',
