--- a/src/layout/blog-layout.css
+++ b/src/layout/blog-layout.css
@@ -19,7 +19,6 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
 }
 
 .top p,
@@ -65,4 +64,8 @@ main {
     width: 100%;
     height: 15rem;
   }
+
+	main {
+		gap: 1.2rem;
+	}
 }
