--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import Nav from "../../components/Nav.astro";
 import Header from '../../components/Header.astro';
 
 
-const posts = (await getCollection('articles')).sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).filter((post) => post.data.draft == false);
+const posts = (await getCollection('articles'))?.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).filter((post) => post.data.draft == false);
 ---
 <MainLayout title="Blog" description="Tonie - Software Developer">
 	<Nav />
@@ -22,7 +22,6 @@ const posts = (await getCollection('articles')).sort((a, b) => a.data.pubDate.va
 						<li class="post">
 							<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 							<p>{post.data.description}</p>
-
 							<FormattedDate date={post.data.pubDate}/>
 						</li>
 					</>
