--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,34 +12,48 @@ main {
 
 .project_container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	flex-direction: column;
+	gap: 2rem;
 }
 
 .project {
-  flex: 0 0 30%;
   display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
+	flex-direction: column;
+	justify-content: space-between;
+  gap: 0.4rem;
+	align-items: baseline;
 }
 
-.project_img {
-  width: 100%;
-  height: 12rem;
-  border-radius: 0.5rem;
-  margin-bottom: 0.5rem;
+.project_tags {
+	display: flex;
+	align-items: flex-start;
+	gap: 0.5rem;
 }
 
-.project_img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 0.5rem;
+.project_tags span {
+	background-color: #1a1a1a;
+	font-weight: 400;
+  filter: brightness(130%);
+	padding: 0rem 1.2rem;
+	font-size: .8rem;
+	opacity: .6;
+	color: white;
+	border-radius: 1rem;
+	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
 }
 
-.project h3 {
+
+.project_title {
   color: rgb(245, 245, 245);
   font-weight: 500;
+	display: flex;
+	gap: 0.4rem;
+	align-items: center;
+}
+
+.project_title:hover {
+	color: #fca311;
+	transition: ease all 300ms;
 }
 
 .project p {
@@ -47,42 +61,5 @@ main {
   font-size: 0.9rem;
   width: 100%;
   line-height: 1.3;
-  min-height: 2.3rem;
-  max-height: 2.3rem;
 }
 
-.project_links {
-  display: flex;
-  align-items: start;
-  justify-content: flex-end;
-  gap: 0.5rem;
-}
-
-.project_link {
-  font-size: 1.3rem;
-}
-
-.project_link:hover {
-  color: #fca311;
-}
-
-@media screen and (max-width: 768px) {
-  .project_container {
-    gap: 2rem;
-  }
-  .project {
-    flex: 0 0 45%;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .project_container {
-    flex-direction: column;
-  }
-  .project_img {
-    height: 15rem;
-  }
-}
