refactor: fix missign seo image

--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -1,5 +1,5 @@
 ---
-let { title, description, keywords, img } = Astro.props;
+let { title, description, keywords, image } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
@@ -25,14 +25,14 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(img, Astro.url)} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(img, Astro.url)} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
 <meta name="twitter:site" content="@tonie_ng" />
 <meta name="twitter:creator" content="@tonie_ng" />
 
